--- a/!LOZ.html
+++ b/!LOZ.html
@@ -124,18 +124,18 @@
 
   <!-- Top Navigation (matches template exactly) -->
   <div class="topnav">
-    <a href="https://bypass.pickledude448.repl.co/index.html">Home</a>
+    <a href="https://theoriginal448.github.io/Bypass/index.html">Home</a>
     <div class="dropdown">
       <button class="dropbtn">Proxies</button>
       <div class="dropdown-content">
-        <a href="https://bypass.pickledude448.repl.co/!Proxies.html">Main</a>
-        <a href="https://bypass.pickledude448.repl.co/!Tsunami.html">Tsunami</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Proxies.html">Main</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Tsunami.html">Tsunami</a>
         <a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
-        <a href="https://bypass.pickledude448.repl.co/!Ultraviolet.html">Ultraviolet</a> 
+        <a href="https://theoriginal448.github.io/Bypass/!Ultraviolet.html">Ultraviolet</a> 
         <a href="https://ultra-max.pickledude448.repl.co/" target="_blank">Ultra-Max</a>
       </div>
     </div>
-    <a href="https://bypass.pickledude448.repl.co/!Webretro.html">Webretro</a>
+    <a href="https://theoriginal448.github.io/Bypass/!Webretro.html">Webretro</a>
     <div class="dropdown">
       <button class="dropbtn">Roms</button>
       <div class="dropdown-content">
@@ -149,12 +149,12 @@
     <div class="dropdown">
       <button class="dropbtn">Games</button>
       <div class="dropdown-content">
-        <a href="https://bypass.pickledude448.repl.co/!Games.html">Main</a>
-        <a href="https://bypass.pickledude448.repl.co/!nonblocked.html">Unblocked</a>
-        <a href="https://bypass.pickledude448.repl.co/!Blocked.html">Blocked</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Games.html">Main</a>
+        <a href="https://theoriginal448.github.io/Bypass/!nonblocked.html">Unblocked</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Blocked.html">Blocked</a>
       </div>
     </div>
-    <a href="https://bypass.pickledude448.repl.co/!about.html">About</a>
+    <a href="https://theoriginal448.github.io/Bypass/!about.html">About</a>
   </div>
 
   <h1>Legend of Zelda ROMs</h1>
