--- a/!Misc.html
+++ b/!Misc.html
@@ -142,20 +142,20 @@
 
   <!-- Navigation Bar -->
   <div class="topnav">
-    <a href="https://bypass.pickledude448.repl.co/index.html">Home</a>
+    <a href="https://theoriginal448.github.io/Bypass/index.html">Home</a>
 
     <div class="dropdown">
       <a href="javascript:void(0)">Proxies</a>
       <div class="dropdown-content">
-        <a href="https://bypass.pickledude448.repl.co/!Proxies.html">Main</a>
-        <a href="https://bypass.pickledude448.repl.co/!Tsunami.html">Tsunami</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Proxies.html">Main</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Tsunami.html">Tsunami</a>
         <a href="https://galaxy.hop.sh/web" target="_blank" rel="noopener noreferrer">Interstellar</a>
         <a href="https://bypass2.pickledude448.repl.co/!Ultraviolet.html">Ultraviolet</a>
         <a href="https://ultra-max.pickledude448.repl.co/" target="_blank" rel="noopener noreferrer">Ultra-Max</a>
       </div>
     </div>
 
-    <a href="https://bypass.pickledude448.repl.co/!Webretro.html">Webretro</a>
+    <a href="https://theoriginal448.github.io/Bypass/!Webretro.html">Webretro</a>
 
     <div class="dropdown">
       <a href="javascript:void(0)" class="active">Roms</a>
@@ -171,13 +171,13 @@
     <div class="dropdown">
       <a href="javascript:void(0)">Games</a>
       <div class="dropdown-content">
-        <a href="https://bypass.pickledude448.repl.co/!Games.html">Main</a>
-        <a href="https://bypass.pickledude448.repl.co/!nonblocked.html">Unblocked</a>
-        <a href="https://bypass.pickledude448.repl.co/!Blocked.html">Blocked</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Games.html">Main</a>
+        <a href="https://theoriginal448.github.io/Bypass/!nonblocked.html">Unblocked</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Blocked.html">Blocked</a>
       </div>
     </div>
 
-    <a href="https://bypass.pickledude448.repl.co/!about.html">About</a>
+    <a href="https://theoriginal448.github.io/Bypass/!about.html">About</a>
   </div>
 
   <!-- Page Title -->
