--- a/index.html
+++ b/index.html
@@ -119,37 +119,42 @@
 <body>
 
   <div class="topnav">
-    <a href="index.html">Home</a>
+    <a href="https://theoriginal448.github.io/Bypass/index.html">Home</a>
+
     <div class="dropdown">
       <button class="dropbtn">Proxies</button>
       <div class="dropdown-content">
-        <a href="!Proxies.html">Main</a>
-        <a href="!Tsunami.html">Tsunami</a>
-        <a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
-        <a href="!Ultraviolet.html">Ultraviolet</a>
-        <a href="https://ultra-max.pickledude448.repl.co/" target="_blank">Ultra-Max</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Proxies.html">Main</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Tsunami.html">Tsunami</a>
+        <a href="https://galaxy.hop.sh/web" target="_blank" rel="noopener noreferrer">Interstellar</a>
+        <a href="https://bypass2.pickledude448.repl.co/!Ultraviolet.html">Ultraviolet</a>
+        <a href="https://ultra-max.pickledude448.repl.co/" target="_blank" rel="noopener noreferrer">Ultra-Max</a>
       </div>
     </div>
-    <a href="!Webretro.html">Webretro</a>
+
+    <a href="https://theoriginal448.github.io/Bypass/!Webretro.html">Webretro</a>
+
     <div class="dropdown">
       <button class="dropbtn">Roms</button>
       <div class="dropdown-content">
-        <a href="!Roms.html">Main</a>
-        <a href="https://roms.pickledude448.repl.co/!Pokemon.html">Pokemon</a>
-        <a href="https://roms.pickledude448.repl.co/!Mario.html">Super Mario</a>
-        <a href="https://roms.pickledude448.repl.co/!LOZ.html">LOZ</a>
-        <a href="https://roms.pickledude448.repl.co/!Misc.html">Misc.</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Roms.html">Main</a>
+        <a href="!Pokemon.html">Pokemon</a>
+        <a href="!Mario.html">Super Mario</a>
+        <a href="!LOZ.html">LOZ</a>
+        <a href="!Misc.html" class="active">Misc.</a>
       </div>
     </div>
+
     <div class="dropdown">
       <button class="dropbtn">Games</button>
       <div class="dropdown-content">
-        <a href="!Games.html">Main</a>
-        <a href="!nonblocked.html">Nonblocked</a>
-        <a href="!Blocked.html">Blocked</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Games.html">Main</a>
+        <a href="https://theoriginal448.github.io/Bypass/!nonblocked.html">Unblocked</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Blocked.html">Blocked</a>
       </div>
     </div>
-    <a href="!about.html">About</a>
+
+    <a href="https://theoriginal448.github.io/Bypass/!about.html">About</a>
   </div>
 
   <h1>ROM Downloads</h1>
