--- a/!Misc.html
+++ b/!Misc.html
@@ -77,7 +77,7 @@
     h1 {
       margin-top: 30px;
       font-size: 3em;
-      color: var(--accent);
+      color: var(--primary);
     }
 
     .section {
