--- a/!LOZ.html
+++ b/!LOZ.html
@@ -155,6 +155,7 @@
       </div>
     </div>
     <a href="https://theoriginal448.github.io/Bypass/!about.html">About</a>
+    <a href="https://theoriginal448.github.io/Bypass/!eaglercraft.html">EaglerCraft</a>
   </div>
 
   <h1>Legend of Zelda ROMs</h1>
