--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <a href="https://theoriginal448.github.io/Bypass/!Blocked.html">Blocked</a>
       </div>
     </div>
-
+    <a href="https://theoriginal448.github.io/Bypass/!eaglercraft.html">EaglerCraft</a>
     <a href="https://theoriginal448.github.io/Bypass/!about.html">About</a>
   </div>
 
