--- a/!Pokemon.html
+++ b/!Pokemon.html
@@ -221,7 +221,7 @@
     <a href="https://drive.google.com/file/d/14xnT-vcnhVXgNzUEkcg06X0AVoQA-7c0/view?usp=sharing" download>
       <div class="card">
         <img src="PokemonB.jpg" alt="Pokemon Black" />
-        <p>Pokemon Black (DS)</p>
+        <p>Pokemon Blac (DS)</p>
       </div>
     </a>
 
