--- a/!LOZ.html
+++ b/!LOZ.html
@@ -168,7 +168,7 @@
       </div>
     </a>
 
-    <a href="Legend of Zelda, The_ Majora's Mask.zip" download>
+    <a href="https://drive.google.com/file/d/1hj1YRYkXBZldqjxrV8ZrRFs0H3ahJNGt/view?usp=sharing" download>
       <div class="card">
         <img src="Majoras Mask.jpeg" alt="Majora's Mask">
         <p>Majora's Mask (N64)</p>
