--- a/!Pokemon.html
+++ b/!Pokemon.html
@@ -176,21 +176,21 @@
       </div>
     </a>
 
-    <a href="Pokemon - Platinum Version (USA) (Rev 1).zip" download>
+    <a href="https://drive.google.com/file/d/1R1z5HiAhzPZBSUsd1Ybm1gZomtY7RmSu/view?usp=sharing" download>
       <div class="card">
         <img src="Pokemon Platinum.jpeg" alt="Pokemon Platinum" />
         <p>Pokemon Platinum (DS)</p>
       </div>
     </a>
 
-    <a href="Pokemon_ Diamond Version.zip" download>
+    <a href="https://drive.google.com/file/d/1QEH3dDKMDyDa5ddC_1E-jxKaYKpM3VBQ/view?usp=sharing" download>
       <div class="card">
         <img src="Pokemon Diamond.jpeg" alt="Pokemon Diamond" />
         <p>Pokemon Diamond (DS)</p>
       </div>
     </a>
 
-    <a href="Pokemon_ Pearl Version.zip" download>
+    <a href="https://drive.google.com/file/d/1tOFu8Qf18uCDEQkglb8UY34BXhL3zpy8/view?usp=sharing" download>
       <div class="card">
         <img src="Pokemon pearl.jpeg" alt="Pokemon Pearl" />
         <p>Pokemon Pearl (DS)</p>
@@ -221,18 +221,18 @@
     <a href="https://drive.google.com/file/d/14xnT-vcnhVXgNzUEkcg06X0AVoQA-7c0/view?usp=sharing" download>
       <div class="card">
         <img src="PokemonB.jpg" alt="Pokemon Black" />
-        <p>Pokemon Blac (DS)</p>
+        <p>Pokemon Black (DS)</p>
       </div>
     </a>
 
-    <a href="Pokemon_ HeartGold Version.zip" download>
+    <a href="https://drive.google.com/file/d/1PXbHCtus8Ccm0K9ymDKRszpvqWIUV4Sv/view?usp=sharing" download>
       <div class="card">
         <img src="HeartGold.jpeg" alt="Pokemon HeartGold" />
         <p>Pokemon HeartGold (DS)</p>
       </div>
     </a>
 
-    <a href="Pokemon - SoulSilver Version (USA).zip" download>
+    <a href="https://drive.google.com/file/d/1IzdeqqxB9n0j7_CZkBnf1pPvIMPeDhrt/view?usp=sharing" download>
       <div class="card">
         <img src="SoulSilver.jpeg" alt="Pokemon SoulSilver" />
         <p>Pokemon SoulSilver (DS)</p>
