--- a/!LOZ.html
+++ b/!LOZ.html
@@ -161,7 +161,7 @@
   <h1>Legend of Zelda ROMs</h1>
 
   <div class="section">
-    <a href="Legend of Zelda, The - Ocarina of Time (U) (V1.2) [!].zip" download>
+    <a href="Legend of Zelda, The - Ocarina of Time (U) (V1.2) [!] (1).zip" download>
       <div class="card">
         <img src="Ocarina of time.jpeg" alt="Ocarina of Time">
         <p>Ocarina of Time (N64)</p>
